--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,3 +1,16 @@
+.titleWrapper {
+	background-color: #f6f6f6;
+	padding: 5rem 7.3rem 2rem 7.3rem;
+}
+
+#titleText {
+	font-weight: 600;
+	font-size: 2.1rem;
+	line-height: 2.5rem;
+	color: #202125;
+	text-align: center;
+}
+
 .aboutSectionWrapper {
 	background-color: #f6f6f6;
 	padding: 2rem 7.3rem;
